# python-project-lvl1

./: .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: cli.py  game_handlers.py  game_launcher.py
brain_games/game_handlers/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_launcher.py
brain_games/tests/: test_cli.py  test_games.py
