[tool.poetry]
name = "avatara_brain_games"
version = "0.2.0"
description = ""
authors = ["Andrey <larin.projects@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^5.4.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_games:brain_even"
brain-calc = "brain_games.scripts.brain_games:brain_calc"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
